--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <img src="image1.jpg" alt="Image 1" class="image">
+        <img src="IMG_6749.png" alt="Image 1" class="image">
+        <p class="text">Current Date and Time:</p>
         <p class="text" id="timer">00:00:00</p>
         <img src="image2.jpg" alt="Image 2" class="image">
     </div>
