--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="IMG_6749.png" alt="Image 1" class="image">
         <p class="text">Current Date and Time:</p>
         <p class="text" id="timer">00:00:00</p>
-        <img src="image2.jpg" alt="Image 2" class="image">
+        <img src="unnamed.jpg" alt="Image 2" class="image">
     </div>
     <script src="script.js"></script>
 </body>
