--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fake Student ID</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <img src="IMG_6749.png" alt="Image 1" class="image">
-        <p class="text">Current Date and Time:</p>
-        <p class="text" id="timer">00:00:00</p>
+        <div class="cont">
+            <p class="text">Current Date and Time:</p>
+            <p class="text" id="timer">00:00:00</p>
+        </div>
         <img src="unnamed.jpg" alt="Image 2" class="image">
     </div>
     <script src="script.js"></script>
